build: remove unused compiler args from pom.xml