@@ -45,9 +45,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <!-- Records are standard in Java 21, no preview needed unless using other preview features -->
-                    <!-- <compilerArgs> -->
-                    <!-- <arg>--enable-preview</arg> -->
-                    <!-- </compilerArgs> -->
                 </configuration>
             </plugin>
             <plugin>
